--- a/TCCMadeireira/App.config
+++ b/TCCMadeireira/App.config
@@ -10,7 +10,10 @@
     </configSections>
     <connectionStrings>
         <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString"
-            connectionString="Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;User ID=FQA;Password=Otavio@435"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435"
+            providerName="System.Data.SqlClient" />
+        <add name="TCCMadeireira.Properties.Settings.MadeireiraConnectionString1"
+            connectionString="Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
@@ -22,7 +25,7 @@
                 <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
             </setting>
             <setting name="CasaConnectionString" serializeAs="String">
-                <value>Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;Integrated Security=True</value>
+                <value>Data Source=desktop-fqa\fqasqlserver;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
             </setting>
             <setting name="CasaPWDConnectionString" serializeAs="String">
                 <value>Data Source=192.168.15.2\FQASQLSERVER;Initial Catalog=Madeireira;User ID=Otavio;Password=Otavio@435</value>
@@ -34,13 +37,13 @@
                 <value>Data Source=NOTE-FQA\FQASQLSERVER;Initial Catalog=Madeireira;Integrated Security=True</value>
             </setting>
             <setting name="ServerName" serializeAs="String">
-                <value>note-fqa</value>
+                <value>desktop-fqa</value>
             </setting>
             <setting name="DBName" serializeAs="String">
                 <value>Madeireira</value>
             </setting>
             <setting name="LoginServer" serializeAs="String">
-                <value>FQA</value>
+                <value>Otavio</value>
             </setting>
             <setting name="PwdServer" serializeAs="String">
                 <value>Otavio@435</value>
